--- a/src/fsae_electric_vehicle/package.xml
+++ b/src/fsae_electric_vehicle/package.xml
@@ -2,18 +2,19 @@
 <package format="2">
   <name>fsae_electric_vehicle</name>
   <version>0.0.0</version>
-  <description>The fsae_electric_vehicle package</description>
+  <description>The fsae_electric_vehicle package. This package contains a bunch of nodes. Each node listens to the canbus header on the Jetson TX2 or Quasar TX2 board. That data is then sent to a remote server which logs the data locally on that server. </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
+  <maintainer email="btc5472@gmail.com">Brandon Cobb</maintainer>
   <maintainer email="thadh@todo.todo">thadh</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>The Unlicense</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
