Organizing code. Fails at linking.

--- a/src/fsae_electric_vehicle/CMakeLists.txt
+++ b/src/fsae_electric_vehicle/CMakeLists.txt
@@ -76,7 +76,7 @@ target_link_libraries(SPEEDOMETER ${catkin_LIBRARIES})
 target_compile_features(SPEEDOMETER PUBLIC cxx_std_17)
 add_dependencies(SPEEDOMETER fsae_electric_vehicle_generate_messages_cpp)
 
-add_executable(gps_lap_timer src/cpp/gps_lap_timer/gps_lap_timer.cpp)
+add_executable(gps_lap_timer src/cpp/gps_lap_timer/gps_lap_timer.cpp src/cpp/gps_lap_timer/GPSUtilities.cpp src/cpp/gps_lap_timer/CANController.cpp)
 target_link_libraries(gps_lap_timer ${catkin_LIBRARIES})
 target_compile_features(gps_lap_timer PUBLIC cxx_std_17)
 add_dependencies(gps_lap_timer fsae_electric_vehicle_generate_messages_cpp)
@@ -85,19 +85,19 @@ add_dependencies(gps_lap_timer fsae_electric_vehicle_generate_messages_cpp)
 #
 # This reader.py is for reading all data being published (except gps data) and outputting it
 #
-catkin_install_python(
- PROGRAMS
-  src/python/reader/reader.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+#catkin_install_python(
+# PROGRAMS
+#  src/python/reader/reader.py
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
 #
 # This gps.py is for reading GPS data being published and outputting it 
 #
-catkin_install_python(
-  PROGRAMS
-  src/python/gps/gps.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+#catkin_install_python(
+#  PROGRAMS
+#  src/python/gps/gps.py
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#)
 ##################################################################################
 
 install(TARGETS SocketIOSender
